--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
-/target
-/classes
-/checkouts
-pom.xml
-pom.xml.asc
-*.jar
-*.class
-/.lein-*
-/.nrepl-port
-.hgignore
-.hg/
+.eunit
+rebar/*
+.rebar/*
+rebar3.crashdump
+deps
+*.sublime-project
+*.sublime-workspace
+*.beam
+bin
+ebin
+erl_crash.dump
+_build/*
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
