--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,8 @@
 {erl_opts, [debug_info]}.
 
 {deps, [
-  {lfe, {git, "https://github.com/rvirding/lfe", {branch, "develop"}}}
+  {lfe, {git, "https://github.com/rvirding/lfe", {branch, "develop"}}},
+  {asciideck, {git, "https://github.com/ninenines/asciideck", {branch, "master"}}}
 ]}.
 
 {plugins, [
