--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,5 +25,22 @@ jobs:
     - uses: actions/checkout@v2
     - name: Compile
       run: rebar3 compile
+    - name: Xref Checks
+      run: rebar3 xref
+#    - name: Dialyzer
+#      run: rebar3 dialyzer
     - name: Run Tests
       run: rebar3 as test eunit
+    - name: Test Coverage
+      run: rebar3 as tests do proper -c, cover -v --min_coverage=0
+    - name: Notify CI/CD Slack Channel
+      uses: innocarpe/actions-slack@v1
+      with:
+        status: ${{ job.status }}
+        success_text: '✅ Build for ${{ github.repository }} on LFE/OTP ${{ matrix.otp_version }} succeeded! 😄🌈🐴🚢🐿 (commit id: ${{ github.sha }})'
+        failure_text: '❌ Build for ${{ github.repository }} on LFE/OTP ${{ matrix.otp_version }} failed! 🤬💣🔥🚒 (commit id: ${{ github.sha }})'
+        cancelled_text: '🚧 Build for ${{ github.repository }} on LFE/OTP ${{ matrix.otp_version }} was cancelled ... 😯🦡 (commit id: ${{ github.sha }})'
+      env:
+        GITHUB_TOKEN: ${{ secrets.CICD_BOT_TOKEN }}
+        SLACK_WEBHOOK_URL: ${{ secrets.CICD_BOT_WEBHOOK }}
+      if: always()
