--- a/rebar.config
+++ b/rebar.config
@@ -2,17 +2,24 @@
 
 {deps, [
   {lfe, {git, "https://github.com/rvirding/lfe", {branch, "develop"}}},
-  {asciideck, {git, "https://github.com/ninenines/asciideck", {branch, "master"}}}
+  {asciideck, {git, "https://github.com/ninenines/asciideck", {branch, "master"}}},
+  {proper, {git, "https://github.com/proper-testing/proper", {tag, "v1.3"}}}
 ]}.
 
 {plugins, [
-  {rebar3_lfe, {git, "https://github.com/lfe-rebar3/rebar3_lfe", {branch, "release/0.3.x"}}}
+  {rebar3_lfe, {git, "https://github.com/lfe-rebar3/rebar3_lfe", {branch, "release/0.3.x"}}},
+  {rebar3_proper, {git, "https://github.com/ferd/rebar3_proper", {tag, "0.12.0"}}}
 ]}.
 
 {provider_hooks, [
   {pre, [{compile, {lfe, compile}}]}
 ]}.
-    
+
+{xref_checks,[
+  undefined_function_calls,undefined_functions,locals_not_used,
+  deprecated_function_calls,deprecated_functions
+]}.
+
 {profiles, [
   {test, [
     {deps, [
