Started working on story metadata.

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,8 @@
 {deps, [
   {lfe, {git, "https://github.com/rvirding/lfe", {branch, "develop"}}},
   {asciideck, {git, "https://github.com/ninenines/asciideck", {branch, "master"}}},
-  {proper, {git, "https://github.com/proper-testing/proper", {tag, "v1.3"}}}
+  {proper, {git, "https://github.com/proper-testing/proper", {tag, "v1.3"}}},
+  {toml, {git, "https://github.com/dozzie/toml", {tag, "v0.3.0"}}}
 ]}.
 
 {plugins, [
