Added aliases + cleanup.

--- a/rebar.config
+++ b/rebar.config
@@ -1,32 +1,55 @@
 {erl_opts, [debug_info]}.
 
 {deps, [
-  {lfe, {git, "https://github.com/rvirding/lfe", {branch, "develop"}}},
-  {asciideck, {git, "https://github.com/ninenines/asciideck", {branch, "master"}}},
-  {proper, {git, "https://github.com/proper-testing/proper", {tag, "v1.3"}}},
-  {toml, {git, "https://github.com/dozzie/toml", {tag, "v0.3.0"}}}
+    {lfe, {git, "https://github.com/rvirding/lfe", {branch, "develop"}}},
+    {asciideck, {git, "https://github.com/ninenines/asciideck", {branch, "master"}}},
+    {proper, {git, "https://github.com/proper-testing/proper", {tag, "v1.3"}}},
+    {toml, {git, "https://github.com/dozzie/toml", {tag, "v0.3.0"}}}
 ]}.
 
 {plugins, [
-  {rebar3_lfe, {git, "https://github.com/lfe-rebar3/rebar3_lfe", {branch, "release/0.3.x"}}},
-  {rebar3_proper, {git, "https://github.com/ferd/rebar3_proper", {tag, "0.12.0"}}}
+    {rebar3_lfe, {git, "https://github.com/lfe-rebar3/rebar3_lfe", {branch, "release/0.3.x"}}},
+    {rebar3_proper, {git, "https://github.com/ferd/rebar3_proper", {tag, "0.12.0"}}}
 ]}.
 
 {provider_hooks, [
-  {pre, [{compile, {lfe, compile}}]}
+    {pre, [
+        {compile, {lfe, compile}}
+    ]}
 ]}.
 
-{xref_checks,[
-  undefined_function_calls,undefined_functions,locals_not_used,
-  deprecated_function_calls,deprecated_functions
+{xref_checks, [
+    undefined_function_calls, undefined_functions, locals_not_used,
+    deprecated_function_calls, deprecated_functions
+]}.
+
+{dialyzer, [
+    {warnings, [unknown]}
 ]}.
 
 {profiles, [
-  {test, [
-    {deps, [
-      {ltest, {git, "https://github.com/lfex/ltest", {branch, "release/0.11.x"}}}
+    {test, [
+        {deps, [
+            {ltest, {git, "https://github.com/lfex/ltest", {tag, "0.11.0"}}}
+        ]},
+        {eunit_opts, [verbose]},
+        {erl_opts, [
+            {src_dirs, ["src", "test"]}
+        ]}
+    ]}
+]}.
+
+{alias, [
+    {repl, [{lfe, repl}]},
+    {coverage, [
+        {proper, "-c"},
+        {cover, "-v --min_coverage=0"}
     ]},
-    {eunit_opts, [verbose]},
-    {erl_opts, [{src_dirs, ["src", "test"]}]}
-  ]}
+    {check, [
+        compile,
+        xref,
+        %dialyzer,
+        {lfe, ltest},
+        coverage
+    ]}
 ]}.
