--- a/rebar.config
+++ b/rebar.config
@@ -40,7 +40,14 @@
 ]}.
 
 {alias, [
-    {repl, [{lfe, repl}]},
+    {repl, [
+        {lfe, repl}
+    ]},
+    {ltest, [
+        %%{lfe, 'clean-build'},
+        compile,
+        {lfe, ltest}
+    ]},
     {coverage, [
         {proper, "-c"},
         {cover, "-v --min_coverage=0"}
