Troubleshooting Erlang 19 failure in CI/CD.

--- a/rebar.config
+++ b/rebar.config
@@ -3,13 +3,11 @@
 {deps, [
     {lfe, {git, "https://github.com/rvirding/lfe", {branch, "develop"}}},
     {asciideck, {git, "https://github.com/ninenines/asciideck", {branch, "master"}}},
-    {proper, {git, "https://github.com/proper-testing/proper", {tag, "v1.3"}}},
     {toml, {git, "https://github.com/dozzie/toml", {tag, "v0.3.0"}}}
 ]}.
 
 {plugins, [
-    {rebar3_lfe, {git, "https://github.com/lfe-rebar3/rebar3_lfe", {branch, "release/0.3.x"}}},
-    {rebar3_proper, {git, "https://github.com/ferd/rebar3_proper", {tag, "0.12.0"}}}
+    {rebar3_lfe, {git, "https://github.com/lfe-rebar3/rebar3_lfe", {branch, "release/0.3.x"}}}
 ]}.
 
 {provider_hooks, [
@@ -30,7 +28,11 @@
 {profiles, [
     {test, [
         {deps, [
+            {proper, {git, "https://github.com/proper-testing/proper", {tag, "v1.3"}}},
             {ltest, {git, "https://github.com/lfex/ltest", {tag, "0.11.0"}}}
+        ]},
+        {plugins, [
+            {rebar3_proper, {git, "https://github.com/ferd/rebar3_proper", {tag, "0.12.0"}}}
         ]},
         {eunit_opts, [verbose]},
         {erl_opts, [
