--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,8 +23,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Download Recent Rebar
+      run: wget https://s3.amazonaws.com/rebar3/rebar3 && chmod 755 ./rebar3
+    - name: Update Path
+      run: echo "./" >> $GITHUB_PATH
+    - name: Check rebar3 Version
+      run: DEBUG=1 rebar3 --version
     - name: Compile
-      run: DEBUG=1 rebar3 compile
+      run: rebar3 compile
     - name: Xref Checks
       run: rebar3 xref
 #    - name: Dialyzer
