Use bombadil instead of toml.

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 {deps, [
     {lfe, {git, "https://github.com/rvirding/lfe", {branch, "develop"}}},
     {asciideck, {git, "https://github.com/ninenines/asciideck", {branch, "master"}}},
-    {toml, {git, "https://github.com/dozzie/toml", {tag, "v0.3.0"}}}
+    {bombadil, {git, "https://github.com/lfex/bombadil", {tag, "0.2.0"}}}
 ]}.
 
 {plugins, [
@@ -43,6 +43,7 @@
 
 {alias, [
     {repl, [
+        compile,
         {lfe, repl}
     ]},
     {ltest, [
