--- a/rebar.config
+++ b/rebar.config
@@ -46,6 +46,7 @@
         compile,
         {lfe, repl}
     ]},
+    %% run with 'rebar3 as test ltest'
     {ltest, [
         %%{lfe, 'clean-build'},
         compile,
