Added support for parsing area and npc paths.

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,8 @@
 {deps, [
     {lfe, {git, "https://github.com/rvirding/lfe", {branch, "develop"}}},
     {asciideck, {git, "https://github.com/ninenines/asciideck", {branch, "master"}}},
-    {bombadil, {git, "https://github.com/lfex/bombadil", {tag, "0.2.0"}}}
+    {bombadil, {git, "https://github.com/lfex/bombadil", {tag, "0.2.0"}}},
+    {streams, {git, "https://github.com/cwbriones/streams", {ref, "e39e9c0fd9a1ad84224c04a2b19f87ef5fb89680"}}}
 ]}.
 
 {plugins, [
